# phantom-mcp

./: .cursorrules  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bare_server.py  claude_desktop_config.json  docker-compose.yml  phantom-ai-mcp.json  phantom_mcp.py  phantom_server.py  pyproject.toml  requirements.txt  run_debug.py  setup.py  simple_server.py  start_server.bat  test_server.py
.phantom/docs/: usage.md
.phantom/legacy/: .gitkeep  std_server.py
.phantom/lib/phantom/: config.py
.phantom/lib/phantom/ai/: advisor.py
.phantom/lib/phantom/exploit/: auto_exploit.py  password_attack.py
.phantom/lib/phantom/post_exploit/: __init__.py  lateral_move.py  priv_esc.py
.phantom/lib/phantom/recon/: __init__.py  osint.py  scanner.py  subdomain.py
.phantom/lib/phantom/reporting/: __init__.py
.phantom/lib/phantom/utils/: database.py  session.py
.phantom/lib/phantom/vuln_scan/: __init__.py  cms_scanner.py  web_scanner.py
.phantom/logs/: batch_log.txt
.phantom/tests/: test_server.py
assets/docs/: README.md  installation.md
assets/lib/phantom/: __init__.py  logger.py
assets/lib/phantom/ai/: __init__.py
assets/lib/phantom/exploit/: exploit_db.py
assets/lib/phantom/reporting/: generator.py
assets/lib/phantom/reporting/templates/: report.html.jinja2
assets/lib/phantom/utils/: __init__.py
configs/: phantom.yaml  tools.yaml
docs/: legal.md
phantom/: server.py  server_full.py
phantom/ai/: analyzer.py
phantom/exploit/: __init__.py
phantom/post_exploit/: persistence.py
phantom/utils/: validators.py
phantom/vuln_scan/: api_scanner.py
tests/: __init__.py  test_recon.py
wordlists/: .gitkeep
